--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thapayoutube",
-  "homepage": "https://syedtechnicl.github.io/new_year",
+  "homepage": "https://syedtechnicl.github.io/New_2023",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
